# cargo-uefi-runner

./: .gitignore  Cargo.toml  LICENSE  README.md  boot.conf
src/: config.rs  main.rs
